k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: declarations-api
  namespace: apps
  labels:
    app: declarations-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: declarations-api
  template:
    metadata:
      labels:
        app: declaration-api
    spec:
      containers:
        - name: declarations-api
          image: localhost:32000/declarations-api:latest
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            timeoutSeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 120
            timeoutSeconds: 10
            periodSeconds: 10
          volumeMounts:
          - mountPath: /declarations
            name: declarations-pvc
