k8s/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: declarations-api-lb
  namespace: apps
spec:
  type: LoadBalancer
  #loadBalancerIP: '10.10.17.17'
  selector:
    labels:
      name: nginx-ingress-microk8s
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
