k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: declarations-api
  namespace: apps
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: declarations-api
